--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -11,6 +11,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/CSS/index.css" />
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+
   </head>
   <body class="dark:bg-[#17181c]">
     <div id="root"></div>
